switched technology to tech

--- a/media.brstore.us/backup-index.html
+++ b/media.brstore.us/backup-index.html
@@ -19,11 +19,11 @@
     <meta name="twitter:title" content="B&R: A New way to Lead">
     <meta name="twitter:description" content="B&R Store - Introducing the Future">
     <meta name="twitter:creator" content="@BandR">
-    <meta name="twitter:image" content="https://technology.brstore.us/bandr/banner.png">
+    <meta name="twitter:image" content="./tech/bandr/banner.png">
     <meta property="og:title" content="B&R: A New way to Lead">
     <meta property="og:type" content="Article">
-    <meta property="og:url" content="https://technology.brstore.us">
-    <meta property="og:image" content="https://technology.brstore.us/banner.png">
+    <meta property="og:url" content="./tech">
+    <meta property="og:image" content="./tech/banner.png">
     <meta property="og:description" content="B&R Store - Introducing the Future">
     <meta property="og:site_name" content="B&R: A New way to Lead">
     <meta property="fb:admins" content="132951670226590">
@@ -58,7 +58,7 @@
       <header class="header js-header">
         <div class="header__center center"><a class="header__logo" href="index.php"><img class="some-icon" src="bandr/header_logo.png" alt="BR Store"><img class="some-icon-dark" src="bandr/header_logo.png" alt="BR Store"></a>
           <div class="header__wrap js-header-wrap">
-            <nav class="header__nav"><a class="header__link" href="Get-Verified/">Verification</a><a class="header__link" href="Services/">Services</a><a class="header__link" href="https://technology.brstore.us/glossary/">Glossary</a>
+            <nav class="header__nav"><a class="header__link" href="Get-Verified/">Verification</a><a class="header__link" href="Services/">Services</a><a class="header__link" href="./tech/glossary/">Glossary</a>
               <div class="header__dropdown js-header-dropdown">
                 <!-- <div class="header__head js-header-head">Service -->
                   <!-- <svg class="icon icon-arrow-bottom"> -->
@@ -81,7 +81,7 @@
                 </div>
                 <div class="header__element">
                   <div class="header__subtitle">FAQs</div>
-                  <a class="header__text" href="https://technology.brstore.us/pricing.html" target="_blank">➤ Read</a>
+                  <a class="header__text" href="./tech/pricing.html" target="_blank">➤ Read</a>
                 </div>
               </div>
               <!-- SOCIAL MEDIA HEADER -->
@@ -420,7 +420,7 @@
                     <use xlink:href="#icon-arrow-bottom"></use>
                   </svg>
                 </div>
-                <div class="footer__menu"><a class="footer__link" href="Get-Verified/">Get Verified</a><a class="footer__link" href="Services/">Services</a><a class="footer__link" href="https://technology.brstore.us/glossary/">Glossary</a><a class="footer__link" href="https://brstore.us/terms.php">Terms Of Service </a><a class="footer__link" href="https://brstore.us/privacy.php">Privacy Policy</a></div>
+                <div class="footer__menu"><a class="footer__link" href="Get-Verified/">Get Verified</a><a class="footer__link" href="Services/">Services</a><a class="footer__link" href="./tech/glossary/">Glossary</a><a class="footer__link" href="https://brstore.us/terms.php">Terms Of Service </a><a class="footer__link" href="https://brstore.us/privacy.php">Privacy Policy</a></div>
               </div>
             </div>
             <div class="footer__col">
