--- a/media.brstore.us/index.html
+++ b/media.brstore.us/index.html
@@ -92,10 +92,10 @@
 								<a href="https://app.brstore.us/feedback/">Contact</a>
 							</li>
 							<li>
-								<a href="https://technology.brstore.us/">About us</a>
+								<a href="./tech/">About us</a>
 							</li>
 							<li>
-								<a href="https://technology.brstore.us/pricing/">FAQ's</a>
+								<a href="./tech/pricing/">FAQ's</a>
 							</li>
 							<li>
 								<a href="mailto:support@brstore.us">Support</a>
