fixed all issues related to v1.0.1, ready

--- a/admin/index.html
+++ b/admin/index.html
@@ -64,9 +64,9 @@
             <div class="rui-mobile-nav">
                 <a id="logo" href="index.html" class="d-inline-flex aabtn ">
                     <span class="rui-logo dark-mode-logo">
-                        <img src="https://brstore.us/img/faviconBR.png" class="rui-custom-logo"
+                        <img src="../img/faviconBR.png" class="rui-custom-logo"
                             alt="Build and Run" />
-                        <img src="https://brstore.us/img/faviconBR.png" class="rui-custom-dmlogo"
+                        <img src="../img/faviconBR.png" class="rui-custom-dmlogo"
                             alt="Build and Run" />
                     </span>
                 </a>
