--- a/tech/pricing/index.html
+++ b/tech/pricing/index.html
@@ -877,7 +877,7 @@
                     <div class="faq__row">
                       <div class="faq__col">
                         <div class="faq__preview"><img srcSet="../img/FAQ/FINANCE@2x.png 2x"
-                            src="../img/FAQ/FINANCE.png" alt="Finance">
+                            src="https://cdn-icons-png.flaticon.com/512/6009/6009305.png" alt="Finance">
                           <button class="play-small">
                             <svg class="icon icon-play">
                               <use xlink:href="#icon-play"></use>
@@ -898,130 +898,7 @@
                 </div>
                 <!-- FINANCE FIRST QUESTION END  -->
                 
-                <div class="faq__item" data-aos="animation-opacity">
-                  <div class="faq__head">How old does my child need to be to participate in class?
-                    <div class="faq__arrow">
-                      <svg class="icon icon-arrow-bottom">
-                        <use xlink:href="#icon-arrow-bottom"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="faq__body">
-                    <div class="faq__row">
-                      <div class="faq__col">
-                        <div class="faq__preview"><img srcSet="img/content/faq-pic@2x.png 2x"
-                            src="img/content/faq-pic.png" alt="Faq pic">
-                          <button class="play-small">
-                            <svg class="icon icon-play">
-                              <use xlink:href="#icon-play"></use>
-                            </svg>
-                          </button>
-                        </div>
-                      </div>
-                      <div class="faq__col">
-                        <div class="faq__subtitle">You don’t need to do anything else</div>
-                        <div class="faq__content">
-                          <p>Mix-and-match dozens of responsive elements to quickly configure your favorite landing page
-                            layouts.</p>
-                          <p>Or hit the ground running with 10 pre-built templates, all in light or dark mode."</p>
-                        </div>
-                        <button class="button-stroke button-small faq__button">Learn more</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="faq__item" data-aos="animation-opacity">
-                  <div class="faq__head">Do I have to be a member to take class?
-                    <div class="faq__arrow">
-                      <svg class="icon icon-arrow-bottom">
-                        <use xlink:href="#icon-arrow-bottom"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="faq__body">
-                    <div class="faq__row">
-                      <div class="faq__col">
-                        <div class="faq__preview"><img srcSet="img/content/faq-pic@2x.png 2x"
-                            src="img/content/faq-pic.png" alt="Faq pic">
-                          <button class="play-small">
-                            <svg class="icon icon-play">
-                              <use xlink:href="#icon-play"></use>
-                            </svg>
-                          </button>
-                        </div>
-                      </div>
-                      <div class="faq__col">
-                        <div class="faq__subtitle">You don’t need to do anything else</div>
-                        <div class="faq__content">
-                          <p>Mix-and-match dozens of responsive elements to quickly configure your favorite landing page
-                            layouts.</p>
-                          <p>Or hit the ground running with 10 pre-built templates, all in light or dark mode."</p>
-                        </div>
-                        <button class="button-stroke button-small faq__button">Learn more</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="faq__item" data-aos="animation-opacity">
-                  <div class="faq__head">Can I join a class once it’s in session?
-                    <div class="faq__arrow">
-                      <svg class="icon icon-arrow-bottom">
-                        <use xlink:href="#icon-arrow-bottom"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="faq__body">
-                    <div class="faq__row">
-                      <div class="faq__col">
-                        <div class="faq__preview"><img srcSet="img/content/faq-pic@2x.png 2x"
-                            src="img/content/faq-pic.png" alt="Faq pic">
-                          <button class="play-small">
-                            <svg class="icon icon-play">
-                              <use xlink:href="#icon-play"></use>
-                            </svg>
-                          </button>
-                        </div>
-                      </div>
-                      <div class="faq__col">
-                        <div class="faq__subtitle">You don’t need to do anything else</div>
-                        <div class="faq__content">
-                          <p>Mix-and-match dozens of responsive elements to quickly configure your favorite landing page
-                            layouts.</p>
-                          <p>Or hit the ground running with 10 pre-built templates, all in light or dark mode."</p>
-                        </div>
-                        <button class="button-stroke button-small faq__button">Learn more</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="faq__item" data-aos="animation-opacity">
-                  <div class="faq__head">Do I need to buy a yoga mat, towel, or equipment?
-                    <div class="faq__arrow">
-                      <svg class="icon icon-arrow-bottom">
-                        <use xlink:href="#icon-arrow-bottom"></use>
-                      </svg>
-                    </div>
-                  </div>
-                  <div class="faq__body">
-                    <div class="faq__row">
-                      <div class="faq__col">
-                        <div class="faq__preview"><img srcSet="img/content/faq-pic@2x.png 2x"
-                            src="img/content/faq-pic.png" alt="Faq pic">
-                          <button class="play-small">
-                            <svg class="icon icon-play">
-                              <use xlink:href="#icon-play"></use>
-                            </svg>
-                          </button>
-                        </div>
-                      </div>
-                      <div class="faq__col">
-                        <div class="faq__subtitle">You don’t need to do anything else</div>
-                        <div class="faq__content">
-                          <p>Mix-and-match dozens of responsive elements to quickly configure your favorite landing page
-                            layouts.</p>
-                          <p>Or hit the ground running with 10 pre-built templates, all in light or dark mode."</p>
-                        </div>
-                        <button class="button-stroke button-small faq__button">Learn more</button> -->
+            
                       </div>
                     </div>
                   </div>
