fixed all issues related to v1.0.1, ready

--- a/tech/index.html
+++ b/tech/index.html
@@ -225,7 +225,7 @@
             <div class="main__wrap">
               <div class="stage">Introducing the Future</div>
               <h1 class="main__title h1">Experience something new for a fair price.</h1>
-              <div class="main__text">The ideal method for creating a business website is <strong>Build and Run</strong>. You benefit from our lower costs compared to other Website Builder like GoDaddy or Wix. <a href="https://brstore.us/tech/pricing/">➲ View Our Pricing</a></div>
+              <div class="main__text">The ideal method for creating a business website is <strong>Build and Run</strong>. You benefit from our lower costs compared to other Website Builder like GoDaddy or Wix. <a href="./tech/pricing/">➲ View Our Pricing</a></div>
 
               <div class="main__btns">
                 <a class="button" href="../admin/">
