fixed all issues related to v1.0.1, ready

--- a/tech/pricing/index.html
+++ b/tech/pricing/index.html
@@ -876,7 +876,7 @@
                   <div class="faq__body">
                     <div class="faq__row">
                       <div class="faq__col">
-                        <div class="faq__preview"><img srcSet="../img/FAQ/FINANCE@2x.png 2x"
+                        <div class="faq__preview"><img srcSet="https://cdn-icons-png.flaticon.com/512/6009/6009305.png"
                             src="https://cdn-icons-png.flaticon.com/512/6009/6009305.png" alt="Finance">
                           <button class="play-small">
                             <svg class="icon icon-play">
